manifests/06-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: employee-app-ingress
  namespace: employee-app

spec:
  ingressClassName: nginx

  rules:
  - host: employee.local

    http:
      paths:

      - path: /api
        pathType: Prefix

        backend:
          service:
            name: backend-service
            port:
              number: 5000

      - path: /
        pathType: Prefix

        backend:
          service:
            name: frontend-service
            port:
              number: 80
